fix layout issue between projects and experience section

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -109,11 +109,15 @@
     min-height: 75vh;
 }
 
+#exp.exp-row {
+    display: flex;
+}
+
 #exp h2 {
     font-size: 50px;
     font-weight: 1000;
     padding-right: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     color: pink;
 }
 
@@ -124,6 +128,7 @@
     border: 3px solid salmon;
     border-radius: 5px;
     margin: 10px;
+    flex: 1
 }
 
 .experience h3 {
@@ -145,7 +150,7 @@
 #projects {
     display: flex;
     padding: 100px 100px 0px 100px;
-    position: relative;
+    min-height: 75vh;
 }
 
 #projects h2 {
@@ -171,7 +176,7 @@
     font-size: 50px;
     font-weight: 1000;
     color: pink;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 #contact.contact-info {
@@ -180,7 +185,7 @@
 }
 
 .icons {
-    padding: 25px;
+    padding-right: 25px;
     float:left;
 }
 
